[package]
name = "example_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tensorrt = { git = "https://github.com/m-dahl/async-tensorrt-lean", rev = "3d520c4", features = [] }
async-cuda = "0.5.4"
tokio = { version = "1", features = [ "full" ] }
tempfile = "3.4"
