[package]
name = "example_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = [ "derive" ] }
async-tensorrt = { git = "https://github.com/m-dahl/async-tensorrt-lean", rev = "7c7a95b", features = ["lean"] }
async-cuda = "0.5.4"
tokio = { version = "1", features = [ "full" ] }
async-channel = "2.2.0"
image = "0.25.1"
